# rag-mcp

./: .env.example  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile  docker-compose.yml
src/: __init__.py
src/config/: __init__.py  settings.py
src/monitoring/: __init__.py  logger.py  metrics.py
src/services/: __init__.py  document_processor.py  query_service.py  rag_manager.py
src/tools/: __init__.py  handlers.py  registry.py
src/utils/: __init__.py  file_utils.py  retry.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: test_rag_workflow.py
tests/unit/: test_config.py  test_utils.py
